--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,5 @@
+springdoc.show-actuator=true
+
 logging.level.com.momong.backend=debug
 logging.level.org.hibernate.type=trace
 logging.level.org.hibernate.SQL=debug
