--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 backend.app.version=1.0.0
 
+jwt.secret-key=${JWT_SECRET_KEY}
+
 springdoc.swagger-ui.operations-sorter=method
 springdoc.use-fqn=true
 
