--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,12 +36,14 @@ jobs:
           path: build/reports/jacoco/test/html
 
       - name: Docker build and push
+        if: ${{ !failure() }}
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
           docker build -t ${{ secrets.DOCKER_REPO_PROD }} -f Dockerfile .
           docker push ${{ secrets.DOCKER_REPO_PROD }}
 
       - name: Executing remote ssh commands with docker compose for Continuous Delivery
+        if: ${{ !failure() }}
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.AWS_EC2_HOST_PROD }}
