--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -9,5 +9,5 @@ logging.level.org.springframework.web.client.RestTemplate=debug
 spring.sql.init.mode=always
 
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
