--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,7 +50,7 @@ jobs:
           username: ${{ secrets.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_KEY_PROD }}
           script: |
-            cd /home/ubuntu/backend
-            sudo docker compose down
-            sudo docker pull ${{ secrets.DOCKER_REPO_PROD }}
-            sudo docker compose up -d
+            cd /home/ec2-user/fmr/server-main/
+            docker-compose down
+            docker pull ${{ secrets.DOCKER_REPO_PROD }}
+            docker-compose up -d
