refactor: #20 게임 결과 저장 API - 게임 기록 시 AI 플레이 데이터도 받을 수 있도록 로직 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 backend.app.version=1.0.0
 
+fmraid.ai-member-id=-1
+
 jwt.secret-key=${JWT_SECRET_KEY}
 
 springdoc.swagger-ui.operations-sorter=method
