--- a/.github/workflows/prod-ci-cd.yml
+++ b/.github/workflows/prod-ci-cd.yml
@@ -1,8 +1,8 @@
-name: Eatery Prod Server - CI
+name: Eatery Prod Server - CI/CD
 
 on:
-  pull_request:
-    branches: [ "main", "develop" ]
+  push:
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -34,3 +34,23 @@ jobs:
         with:
           name: jacoco-report
           path: build/reports/jacoco/test/html
+
+      - name: Docker build and push
+        if: ${{ !failure() }}
+        run: |
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker build -t ${{ secrets.DOCKER_REPO_PROD }} -f Dockerfile-prod .
+          docker push ${{ secrets.DOCKER_REPO_PROD }}
+
+      - name: Executing remote ssh commands with docker compose for Continuous Delivery
+        if: ${{ !failure() }}
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.AWS_EC2_HOST_PROD }}
+          username: ${{ secrets.AWS_EC2_USERNAME }}
+          key: ${{ secrets.AWS_EC2_KEY_PROD }}
+          script: |
+            cd /home/ec2-user/fmr/server-main/
+            docker-compose down
+            docker pull ${{ secrets.DOCKER_REPO_PROD }}
+            docker-compose up -d
